--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "perfectkb-yate",
-  "version": "0.9.2",
-  "homepage": "https://perfectkb.github.io/yate",
+  "name": "TQ-yate",
+  "version": "0.10.1",
+  "homepage": "https://www.toquadrant.com",
   "authors": [
-    "Maxime Lefrançois <maxime.lefrançois@emse.fr>"
+    "Patrick Doyle <pdoyle@topquadrant.com>"
   ],
-  "description": "Yet Another Turtle Editor, forked from YASQE",
+  "description": "TQ-yate - Forked from YATE",
   "main": "dist/yate.bundled.min.js",
   "moduleType": [
     "globals"
