--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "TQ-yate",
+  "name": "tq-yate",
   "description": "TQ-yate - forked from YATE",
-  "version": "0.10.0",
+  "version": "0.10.1",
   "main": "src/main.js",
   "license": "MIT",
   "author": {
